<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/first_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="Введите первое число"
        android:inputType="number"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/second_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:autofillHints=""
        android:hint="Введите второе число"
        android:inputType="number"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:backgroundTint="#000000"
        android:text="Add"
        app:cornerRadius="15dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/subtract"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:backgroundTint="#FFC107"
        android:text="Sub"
        app:cornerRadius="15dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/multiply"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/black"
        android:text="Mult"
        app:cornerRadius="15dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/divide"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:backgroundTint="#FFC107"
        android:text="Div"
        app:cornerRadius="15dp" />

</LinearLayout>